# fourier

./: .gitignore  README.md  theory.md
code/: .clang-format  .vimrc  AUTHORS  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  build.sh  callgrind.out.3204  callgrind.out.3758  cmake_install.cmake  configure
code/include/: 2dfft.h  fft.h  image_manager.h  opencv_manager.h  types.h
code/include/algorithms/: 2dfft.h  fake_2dfft.h  fft.h  hough.h
code/include/applications/: fourier_audio.h  image_manager.h  opencv_manager.h
code/include/utility/: audio_wrapper.h  fake_fft.h  image_manager.h  matplotlibcpp.h  opencv_manager.h  sfml_wrapper.h  types.h
code/lib/: 2dfft.cpp  fft.cpp  image_manager.cpp  opencv_manager.cpp
code/output/: output.txt
code/res/cpp_libs/: Dockerfile
code/res/image/output/: canez_bigot.csv  hcsv.csv  indian.csv
code/script/: build  pre_build  run  run_pa_mac
code/scripts/: build.sh
code/src/: 2dfft.cpp  CMakeLists.txt  Makefile  a.out  image_manager.cpp  main.cpp  main_audio.cpp  main_image.cpp
code/src/algorithms/: 2dfft.cpp  fft.cpp  hough.cpp
code/src/applications/: audio.cpp  fourier_audio.cpp  image_manager.cpp  opencv_manager.cpp  sfml_wrapper.cpp
code/src/main/: audio.cpp  generic.cpp  hough.cpp  image.cpp  opencv.cpp  sound.cpp
code/src/utility/: audio_wrapper.cpp  image_manager.cpp  opencv_manager.cpp  sfml_wrapper.cpp
code/test/: Makefile  cmake_install.cmake  test.h
code/tools/: CMakeLists.txt
docs/: fourier.md  hough.md  image.md  main.md  main.tex  martin.md  signalproc.md  theory.md
docs/notes/: image.md
docs/sections/1introduction/: 1context.tex  2objectives.tex  main.tex
docs/sections/2related_works/: 1classification.tex  main.tex
docs/sections/2related_works/source_code/: fft.txt  fft_recursive.cpp
docs/sections/3theory/: 1theory.tex  main.tex
docs/sections/4proposal/: 1application.tex  2algorithm.tex  main.tex
docs/utils/styles/: listing.sty
keynotes/: package-lock.json
keynotes/past_keynotes/slides_0/: slides.md
keynotes/slides/: slides.md
literature/jotarios/: jorge.md
literature/ramirez/: paper.md
old/: theory.md
open-cv-test/: main.cpp
open-cv-test/output/: output.txt
